# MentorsMind-Backend

./: .env.development  .env.example  .env.test  ADVANCED_ANALYTICS_IMPLEMENTATION.md  ANALYTICS_VIEWS_FIX.md  CERTIFICATION_IMPLEMENTATION_SUMMARY.md  CONFIG.md  Cargo.toml  DATA_ENCRYPTION_AT_REST.md  DEPLOYMENT_NOTES.md  ELASTICSEARCH_IMPLEMENTATION.md  IMPLEMENTATION_STATUS_FINAL.md  ISSUE_418_IMPLEMENTATION_SUMMARY.md  ISSUE_422_IMPLEMENTATION_SUMMARY.md  ISSUE_423_IMPLEMENTATION_SUMMARY.md  LEARNING_PATH_API_DOCUMENTATION.md  LEARNING_PATH_BUILDER_COMPLETE_SUMMARY.md  LEARNING_PATH_BUILDER_EXECUTIVE_SUMMARY.md  LEARNING_PATH_BUILDER_PROJECT_COMPLETE.md  LEARNING_PATH_IMPLEMENTATION.md  LEARNING_PATH_QUICK_START.md  MENTOR_CERTIFICATION_SYSTEM.md  MENTOR_VERIFICATION_WORKFLOW.md  OFFLINE_SUPPORT.md  PERFORMANCE_BENCHMARKS.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_5_COMPLETION_SUMMARY.md  PHASE_6_COMPLETION_SUMMARY.md  PHASE_7_COMPLETION_SUMMARY.md  README.md  REFERRAL_IMPLEMENTATION_SUMMARY.md  REFERRAL_PROGRAM_DOCUMENTATION.md  REFERRAL_QUICK_START.md  SECURITY_QUICK_REFERENCE.md  SECURITY_TESTING.md  SESSION_RECORDING_ENHANCEMENTS.md  SESSION_RECORDING_IMPLEMENTATION.md  TESTING_QUICK_START.md  TESTING_README.md  (+12 more)
.github/: dependabot.yml
.husky/: pre-commit
.zap/: zap-api-scan.conf  zap-baseline.conf
benchmarks/: .gitignore  README.md  comparator.ts  config.ts  index.ts  runner.ts
docs/: API_DEPRECATION.md  API_DEPRECATION_IMPLEMENTATION.md  database-pool-tuning.md  dispute-resolution.md  escrow-api.md  logging.md  stripe-setup.md  (+3 more)
(+478 files in other folders)
